plugins {
    id "idea"
    id "java"
    id "io.freefair.lombok" version "5.3.0"
    id "application"
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

ext {
    jUnitVersion = "5.7.1"
    jvmArgEnablePreview = "--enable-preview"
}

tasks.withType(JavaCompile) {
    options.compilerArgs += jvmArgEnablePreview
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
}

lombok {
    config["lombok.accessors.chain"] = "true"
    config["lombok.toString.callSuper"] = "call"
    config["lombok.equalsAndHashCode.callSuper"] = "skip"
}

test {
    useJUnitPlatform {
        jvmArgs += jvmArgEnablePreview
    }
}

run {
    main = "org.acme.game.GameApp"
    jvmArgs += jvmArgEnablePreview
    standardInput = System.in
}